--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,8 @@ repositories {
 
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.4'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testImplementation 'org.assertj:assertj-core:3.11.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
